@@ -1,3 +1,15 @@
+2012-04-07  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.8):
+
+	- Fix bug. Reading of .mha files with LOCAL binary data was
+	starting at the wrong place (at the beginning of the LOCAL line,
+	rather than after it).
+
+	* matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.4):
+
+	- Enable writing of 2D images.
+
 2012-03-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* matlab/ItkToolbox/CMakeLists.txt (v0.4.4):
